the "computerPlay" func is added

--- a/rps.html
+++ b/rps.html
@@ -8,7 +8,11 @@
 
 <body>
     <script type="text/javascript">
-        
+        function computerPlay() {
+            return Math.random()
+        }
+
+        alert(computerPlay())
     </script>
 </body>
 
