finished making the carcass without frontend

--- a/rps.html
+++ b/rps.html
@@ -67,11 +67,11 @@
             }
             // alert('Computer score: ' + comp_sc + ". Your score: " + my_sc)
             if (my_sc < comp_sc) {
-                alert('You lose!')
-            } else if((my_sc > comp_sc)) {
-                alert('You win!')
+                alert("Computer: " + comp_sc + " You: " + my_sc + '. You lose!')
+            } else if (my_sc > comp_sc) {
+                alert("Computer: " + comp_sc + " You: " + my_sc + '. You win!')
             } else {
-                alert("it's a tie o_0")
+                alert("Computer: " + comp_sc + " You: " + my_sc + " it's a tie o_0")
             }
         }
 
